# iseefortune-anchor

./: .gitignore  Anchor.toml  Cargo.toml  README.md  SECURITY.md
programs/ic42n/: Cargo.toml
programs/ic42n/src/: constants.rs  errors.rs  lib.rs
programs/ic42n/src/instructions/: config_update.rs  game_close.rs  game_resolve_complete.rs  game_resolve_init.rs  game_resolve_reprocess.rs  game_resolve_rollover.rs  initialize.rs  mod.rs  prediction_change_number.rs  prediction_claim.rs  prediction_increase.rs  prediction_place.rs  profile_close.rs  ticket_award_auto.rs  ticket_award_manual.rs  tier_close.rs  tier_init.rs  tier_reset.rs  tier_update_active.rs
programs/ic42n/src/state/: config.rs  live_feed.rs  mod.rs  player_profile.rs  prediction.rs  resolved_game.rs  tiers.rs  treasury.rs
programs/ic42n/src/utils/: betting.rs  bitmap.rs  merkle.rs  mod.rs  prediction.rs  resolve.rs  ticket.rs  transfers.rs
verifier-deps/: Cargo.toml
