[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
opt-level = "s"        # or "z" if you really want smallest possible
overflow-checks = true
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
